--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next stasdrt",
+    "start": "next start",
     "lint": "next lint",
     "proxy": "mkcert -install && mkcert localhost && local-ssl-proxy --source 3010 --target 3000 --cert localhost.pem --key localhost-key.pem",
     "devproxy": "concurrently --kill-others \"npm run proxy\" \"npm run dev\"",
